# hypothesis-graph

./: README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
docs/: architecture-overview.md  index.html
docs/assets/: style.css
hg_builder_v0/: __init__.py  __main__.py  hg_cli.py
hg_builder_v0/hg_compile/: __init__.py  compile_masks.py
hg_builder_v0/hg_core_ir/: __init__.py  models.py  schema_export.py
hg_builder_v0/hg_factlog/: __init__.py  store.py
hg_builder_v0/hg_fca_export/: __init__.py  export.py  lattice.py
hg_builder_v0/hg_materialize/: __init__.py  materialize.py
hg_builder_v0/migration/: __init__.py  from_hcg_snapshot_to_factlog.py
tests/: test_hg_builder_v0_acceptance.py
